install babel dependencies

--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
     "single-spa-react": "^2.10.2",
     "single-spa-vue": "^1.5.4",
     "vue": "^2.6.10"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "babel-loader": "^8.0.6"
   }
 }
