--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple Micro Frontend App with React and VueJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --open",
+    "build": "webpack --config webpack.config.js -p"
   },
   "repository": {
     "type": "git",
